changed some grid-properties to flexbox and fixed the miss-alignment of the page

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 
 .homeContainer {
   position: relative;
-  left: 62.5px;
+  /* left: 62.5px; this was the problem*/ 
 }
 body{
   background-image: 
